--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint --ext .js src",
     "babel": "babel src --out-dir lib",
-    "test": "npm run lint"
+    "test": "npm run lint && mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,9 @@
     "babel-preset-stage-0": "^6.1.2",
     "eslint": "^1.8.0",
     "eslint-config-airbnb": "^1.0.0",
-    "eslint-plugin-react": "^3.7.1"
+    "eslint-plugin-react": "^3.7.1",
+    "expect.js": "^0.3.1",
+    "mocha": "^2.3.4",
+    "redux": "^3.0.4"
   }
 }
