--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   },
   "homepage": "https://github.com/reactbits/make-reducer#readme",
   "devDependencies": {
-    "babel": "^6.1.5",
-    "babel-core": "^6.2.1",
-    "babel-eslint": "^4.1.5",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-stage-0": "^6.1.2",
-    "eslint": "^1.10.1",
-    "eslint-config-airbnb": "^1.0.0",
-    "eslint-plugin-react": "^3.10.0",
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.21",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.1.1",
+    "eslint-plugin-react": "^3.12.0",
     "expect.js": "^0.3.1",
     "mocha": "^2.3.4",
-    "redux": "^3.0.4"
+    "redux": "^3.0.5"
   }
 }
