--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "lint": "eslint --ext .js src",
     "babel": "babel src --out-dir lib",
-    "test": "npm run lint && mocha --compilers js:babel-core/register"
+    "coverage": "babel-node -r node_modules/isparta/lib/cli cover --root src --include-all-sources --report lcov --report html node_modules/mocha/bin/_mocha -- test",
+    "coverage-check": "node node_modules/isparta/node_modules/istanbul/lib/cli check-coverage --statements 100 --functions 100 --branches 100 --lines 100",
+    "codecov": "cat ./coverage/coverage.json | ./node_modules/codecov.io/bin/codecov.io.js",
+    "test": "npm run lint && npm run coverage && npm run codecov"
   },
   "repository": {
     "type": "git",
@@ -28,10 +31,12 @@
     "babel-eslint": "^5.0.0-beta6",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "codecov.io": "^0.1.6",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
     "eslint-plugin-react": "^3.12.0",
     "expect.js": "^0.3.1",
+    "isparta": "^4.0.0",
     "mocha": "^2.3.4",
     "redux": "^3.0.5"
   }
