--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/reactbits/make-reducer#readme",
   "devDependencies": {
     "babel": "^6.3.13",
+    "babel-cli": "^6.3.17",
     "babel-core": "^6.3.21",
     "babel-eslint": "^5.0.0-beta6",
     "babel-preset-es2015": "^6.3.13",
