--- a/.eslintrc
+++ b/.eslintrc
@@ -9,11 +9,12 @@
     "es6": true
   },
 
-  rules: {
+  "rules": {
   	"id-length": 0,
   	"indent": [2, "tab"],
   	"no-console": 0,
   	"no-param-reassign": 0,
-  	"func-names": 0
+  	"func-names": 0,
+		"max-len": [2, 100, 2, {"ignoreComments":true, "ignoreUrls": true}]
   }
 }
