--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "isparta": "^4.0.0",
     "mocha": "^2.3.4",
     "redux": "^3.0.5"
+  },
+  "dependencies": {
+    "snake-case": "^1.1.2"
   }
 }
