--- a/package.json
+++ b/package.json
@@ -26,20 +26,11 @@
   },
   "homepage": "https://github.com/reactbits/make-reducer#readme",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.3",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
     "codecov.io": "^0.1.6",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-jsx-a11y": "^1.0.2",
-    "eslint-plugin-react": "^5.0.1",
     "expect.js": "^0.3.1",
     "isparta": "^4.0.0",
     "mocha": "^2.4.5",
+    "react-devpack": "^0.1.22",
     "redux": "^3.5.2"
   },
   "dependencies": {
