--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "id-length": 0,
     "indent": [2, "tab"],
     "no-console": 0,
+    "no-tabs": 0,
     "func-names": 0,
     "max-len": [2, 100, 2, {"ignoreComments":true, "ignoreUrls": true}]
   }
