--- a/.eslintrc
+++ b/.eslintrc
@@ -11,9 +11,8 @@
 
   "rules": {
     "id-length": 0,
-    "indent": [2, "tab"],
+    "indent": ["error", 2, {"SwitchCase": 1}],
     "no-console": 0,
-    "no-tabs": 0,
     "func-names": 0,
     "max-len": [2, 100, 2, {"ignoreComments":true, "ignoreUrls": true}]
   }
